[package]
name = "ev3robot"
version = "0.2.1"
edition = "2021"
authors = ["Nikitat0"]
license = "MIT"

description = "Rust library for ev3dev"
categories = ["api-bindings", "embedded", "hardware-support"]
keywords = ["ev3", "ev3dev", "lego", "mindstorms"]

repository = "https://github.com/Nikitat0/ev3robot"

[workspace]
members = ["macros"]

[dependencies]
anyhow = "1"
bitflags = "1"
derive_more = "0.99"
ev3robot_macros = { path = "macros", version = "0.2.1" }
tap = "1"
thiserror = "1"
