[package]
name = "ev3robot_macros"
version = "0.3.0"
edition = "2021"
authors = ["Nikitat0"]
license = "MIT"

description = """
Proc-macro crate for ev3robot.
Don't depend on this crate directly.
"""

repository = "https://github.com/Nikitat0/ev3robot"

[lib]
proc-macro = true

[dependencies]
darling = "0.14"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["default", "full"] }
tap = "1"
